--- a/package.json
+++ b/package.json
@@ -12,17 +12,26 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.7.3",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-constants": "^13.1.1",
+    "expo-linear-gradient": "^11.3.0",
     "expo-status-bar": "~1.3.0",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-gesture-handler": "^2.4.2",
+    "react-native": "0.66.0",
+    "react-native-confetti-cannon": "^1.5.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-modalize": "1.3.6",
+    "react-native-navigation": "^7.28.0",
+    "react-native-navigation-hooks": "^6.3.0",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "^3.13.1",
-    "react-native-web": "0.17.7",
+    "react-native-select-dropdown": "^2.0.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
