--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.6",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.7.3",
@@ -18,10 +19,11 @@
     "expo-constants": "^13.1.1",
     "expo-linear-gradient": "^11.3.0",
     "expo-status-bar": "~1.3.0",
+    "firebase": "^9.8.2",
     "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-native": "0.66.0",
+    "react-native": "0.68.1",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-modalize": "1.3.6",
@@ -32,6 +34,7 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "^3.13.1",
     "react-native-select-dropdown": "^2.0.1",
+    "react-native-toast-message": "^2.1.5",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
