--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-constants": "^13.1.1",
     "expo-linear-gradient": "^11.3.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.2",
     "firebase": "^9.8.2",
     "lodash": "^4.17.21",
     "react": "17.0.2",
