--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "^3.13.1",
-    "react-native-select-dropdown": "^2.0.1",
+    "react-native-star-rating-widget": "^1.2.0",
+    "react-native-svg": "^12.3.0",
     "react-native-toast-message": "^2.1.5",
     "styled-components": "^5.3.5"
   },
