--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^5.7.3",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-app-loading": "~2.0.0",
     "expo-constants": "^13.1.1",
     "expo-linear-gradient": "^11.3.0",
     "expo-status-bar": "~1.3.0",
