--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.6",
+    "@react-native-community/datetimepicker": "^6.1.3",
+    "@react-native-menu/menu": "^0.5.2",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.7.3",
@@ -18,6 +20,7 @@
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-constants": "^13.1.1",
+    "expo-dev-client": "~1.0.0",
     "expo-linear-gradient": "^11.3.0",
     "expo-splash-screen": "^0.15.1",
     "expo-status-bar": "~1.3.0",
@@ -28,7 +31,9 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.1",
     "react-native-confetti-cannon": "^1.5.2",
+    "react-native-date-picker": "^4.2.2",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-material-menu": "^2.0.0",
     "react-native-modalize": "1.3.6",
     "react-native-navigation": "^7.28.0",
     "react-native-navigation-hooks": "^6.3.0",
